[gd_scene load_steps=3 format=3 uid="uid://dslxjavkrqygd"]

[ext_resource type="Script" path="res://Cars/VinPlate.gd" id="1_b2of8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mlfn6"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="VinPlate" type="Node2D"]
script = ExtResource("1_b2of8")

[node name="Panel" type="Panel" parent="."]
offset_left = 43.0
offset_top = 72.0
offset_right = 382.0
offset_bottom = 248.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mlfn6")

[node name="Model" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 13.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 46.0
mouse_filter = 1
text = "Test, test test."

[node name="VIN" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 13.0
offset_top = 58.0
offset_right = 300.0
offset_bottom = 84.0
mouse_filter = 1
text = "Test, test test."

[node name="Color" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 13.0
offset_top = 94.0
offset_right = 300.0
offset_bottom = 120.0
mouse_filter = 1
text = "Test, test test."

[node name="Button" type="Button" parent="."]
offset_left = 22.0
offset_top = 12.0
offset_right = 80.0
offset_bottom = 44.0
text = "Back"

[connection signal="gui_input" from="Panel/Model" to="." method="_on_model_gui_input"]
[connection signal="gui_input" from="Panel/VIN" to="." method="_on_vin_gui_input"]
[connection signal="gui_input" from="Panel/Color" to="." method="_on_color_gui_input"]
[connection signal="gui_input" from="Button" to="." method="_on_button_gui_input"]
